--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,33 +1,20 @@
 name: Go
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+on: [ push ]
 jobs:
+  # Build project
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: [ "1.17", "1.18" ]
     steps:
       - uses: actions/checkout@v3
-
       - name: Set up Go
-        uses: actions/setup-go@v3
+      - uses: actions/setup-go@v3
         with:
-          go-version: 1.17
-
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Code quality test
-        uses: golangci/golangci-lint-action@v2
-        with:
-          version: latest
-
+          go-version: ${{ matrix.go }}
+  # Test project
   test:
     runs-on: ubuntu-latest
     strategy:
