--- a/.github/linters/.golangci.yml
+++ b/.github/linters/.golangci.yml
@@ -1,12 +1,14 @@
 run:
   timeout: 5m
-  go: '1.17'
+  go: '1.20'
   tests: false
   modules-download-mode: vendor
   skip-dirs-use-default: true
   skip-dirs:
     - generated
     - vendor
+  skip-files:
+    - ".*mock.*.go$"
 
 output:
   sort-results: true
