--- a/.github/workflows/cover.yml
+++ b/.github/workflows/cover.yml
@@ -1,5 +1,7 @@
 on:
-  - pull_request
+  pull_request:
+    branches:
+      - main
 
 jobs:
   test:
@@ -15,7 +17,7 @@ jobs:
       - name: Setup go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.18'
+          go-version: '1.20'
 
       - uses: actions/cache@v3
         with:
